# ClipboardTracker

./: .gitignore  CMakeLists.txt  ClipboardTracker.pro  README.md  clipboardactionhandler.cpp  clipboardactionhandler.h  clipboardmanager.cpp  clipboardmanager.h  clipboardmonitor.cpp  clipboardmonitor.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Clipboard/: clipboardactionhandler.cpp  clipboardactionhandler.h  clipboardmanager.cpp  clipboardmanager.h  clipboardmonitor.cpp  clipboardmonitor.h  myclipboardinfo.h  myclipboardlistmodel.cpp  myclipboardlistmodel.h
UI/: customtrayicon.cpp  customtrayicon.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
